# FastAPI

./: alembic.ini  api.py  config.py  models.py  pyproject.toml  response_models.py
alembic/: env.py
alembic/versions/: aef5e585f3e8_ваш_комментарий.py
